/**
 * OG Metadata Tests with Real Tweet Fixtures
 *
 * Tests the Open Graph metadata generation using real FxTwitter API responses.
 * These tests ensure social sharing previews (unfurls) work correctly for all tweet types.
 */

import { describe, it, expect } from 'vitest'
import { getOgImage } from '@/lib/utils/og-image'
import { buildTweetTitle, buildTweetSeoDescription } from '@/lib/utils/tweet-metadata'
import { fixtures, fixtureMetadata, type FixtureSlug } from './fixtures/tweets'

const BASE_URL = 'https://adhx.com'

describe('OG Metadata with Real Fixtures', () => {
  describe('getOgImage returns appropriate image for each tweet type', () => {
    it.each(fixtureMetadata)('$slug: returns correct OG image', ({ slug }) => {
      const fixture = fixtures[slug as FixtureSlug]
      const tweet = fixture.tweet!

      const ogImage = getOgImage(tweet, BASE_URL)

      // Verify we get a valid URL
      expect(ogImage).toBeTruthy()
      expect(ogImage).toMatch(/^https?:\/\//)

      // Snapshot the OG image URL for regression detection
      expect({ slug, ogImage }).toMatchSnapshot()
    })
  })

  describe('Text tweets use author avatar', () => {
    it('plain-text: uses author avatar instead of logo', () => {
      const tweet = fixtures['plain-text'].tweet!
      const ogImage = getOgImage(tweet, BASE_URL)

      // Text-only tweets now use author avatar (priority 5) instead of logo
      expect(ogImage).not.toBe(`${BASE_URL}/og-logo.png`)
      expect(ogImage).toBe(tweet.author.avatar_url)
    })
  })

  describe('Media tweets use media thumbnails', () => {
    it('video-tweet: uses video thumbnail', () => {
      const tweet = fixtures['video-tweet'].tweet!
      const ogImage = getOgImage(tweet, BASE_URL)

      // Should be the video thumbnail, not the logo
      expect(ogImage).not.toBe(`${BASE_URL}/og-logo.png`)
      expect(ogImage).toContain('twimg.com')
    })

    it('4-images: uses first photo', () => {
      const tweet = fixtures['4-images'].tweet!
      const ogImage = getOgImage(tweet, BASE_URL)

      expect(ogImage).not.toBe(`${BASE_URL}/og-logo.png`)
      expect(ogImage).toContain('twimg.com')
    })

    it('long-text-2-images: uses first photo', () => {
      const tweet = fixtures['long-text-2-images'].tweet!
      const ogImage = getOgImage(tweet, BASE_URL)

      expect(ogImage).not.toBe(`${BASE_URL}/og-logo.png`)
    })

    it('long-text-1-image: uses the single photo', () => {
      const tweet = fixtures['long-text-1-image'].tweet!
      const ogImage = getOgImage(tweet, BASE_URL)

      expect(ogImage).not.toBe(`${BASE_URL}/og-logo.png`)
    })
  })

  describe('Quote tweets with media', () => {
    it('text-quoting-video: uses quoted video thumbnail if no direct media', () => {
      const tweet = fixtures['text-quoting-video'].tweet!
      const ogImage = getOgImage(tweet, BASE_URL)

      // Should use the quoted video's thumbnail
      expect(ogImage).toBeTruthy()
    })

    it('quote-of-image-tweet: uses quoted image if no direct media', () => {
      const tweet = fixtures['quote-of-image-tweet'].tweet!
      const ogImage = getOgImage(tweet, BASE_URL)

      expect(ogImage).toBeTruthy()
    })

    it('quote-of-text-tweet: falls back to logo if quoted tweet has no media', () => {
      const tweet = fixtures['quote-of-text-tweet'].tweet!
      const ogImage = getOgImage(tweet, BASE_URL)

      // If the quoted tweet is text-only, should fall back to logo
      // (unless the quoting tweet has its own media)
      expect(ogImage).toBeTruthy()
    })
  })

  describe('Article tweets', () => {
    it('article-no-header: handles article without cover image', () => {
      const tweet = fixtures['article-no-header'].tweet!
      const ogImage = getOgImage(tweet, BASE_URL)

      // Should fallback appropriately
      expect(ogImage).toBeTruthy()
    })

    it('article-with-media: uses article cover or media', () => {
      const tweet = fixtures['article-with-media'].tweet!
      const ogImage = getOgImage(tweet, BASE_URL)

      expect(ogImage).toBeTruthy()
      expect(ogImage).not.toBe(`${BASE_URL}/og-logo.png`)
    })

    it('article tweets use article content for description when tweet.text is empty', () => {
      // Article tweets often have empty tweet.text but have article.title and preview_text
      const articleWithMedia = fixtures['article-with-media'].tweet!
      const articleNoHeader = fixtures['article-no-header'].tweet!

      // Verify the fixtures have empty text but article content
      expect(articleWithMedia.text).toBe('')
      expect(articleWithMedia.article?.title).toBeTruthy()
      expect(articleWithMedia.article?.preview_text).toBeTruthy()

      expect(articleNoHeader.text).toBe('')
      expect(articleNoHeader.article?.title).toBeTruthy()
      expect(articleNoHeader.article?.preview_text).toBeTruthy()

      // Description should use article preview (since tweet.text is empty)
      const displayText1 = articleWithMedia.text || articleWithMedia.article?.preview_text || ''
      const displayText2 = articleNoHeader.text || articleNoHeader.article?.preview_text || ''

      expect(displayText1).toContain('fidgeting with macros') // From article preview
      expect(displayText2).toContain('$1 trillion') // From article preview
    })
  })

  describe('External link tweets', () => {
    it('youtube-link: uses external thumbnail if available', () => {
      const tweet = fixtures['youtube-link'].tweet!
      const ogImage = getOgImage(tweet, BASE_URL)

      // YouTube links typically have thumbnails
      expect(ogImage).toBeTruthy()
    })
  })

  describe('Full metadata generation', () => {
    // Test the complete metadata object that would be generated, using the
    // real extracted helpers (src/lib/utils/tweet-metadata.ts) rather than a
    // hand-rolled re-implementation, so this test can't drift from production.
    it.each(fixtureMetadata)('$slug: generates valid content-first metadata', ({ slug }) => {
      const fixture = fixtures[slug as FixtureSlug]
      const tweet = fixture.tweet!

      const title = buildTweetTitle(tweet, tweet.author.screen_name)
      const description = buildTweetSeoDescription(tweet)
      const ogImage = getOgImage(tweet, BASE_URL)

      const metadata = {
        title,
        description,
        openGraph: {
          type: 'article',
          title,
          description,
          siteName: 'ADHX',
          authors: [`https://x.com/${tweet.author.screen_name}`],
          publishedTime: tweet.created_at,
          images: [{ url: ogImage, width: 1200, height: 630 }],
        },
        twitter: {
          card: 'summary_large_image',
          title,
          description,
          images: [ogImage],
          creator: `@${tweet.author.screen_name}`,
        },
      }

      // Validate structure
      expect(metadata.title).toBeTruthy()
      // No brand suffix in the string — the layout title template adds '| ADHX'.
      expect(metadata.title.includes('| ADHX')).toBe(false)
      expect(metadata.description.length).toBeLessThanOrEqual(160)
      expect(metadata.openGraph.images[0].url).toBeTruthy()
      expect(metadata.twitter.card).toBe('summary_large_image')

      // Snapshot full metadata for regression detection
      expect(metadata).toMatchSnapshot()
    })
  })

  describe('Content-first title/description helpers', () => {
    it('article-with-media: keeps the X Article title as the lead', () => {
      const tweet = fixtures['article-with-media'].tweet!
      const title = buildTweetTitle(tweet, tweet.author.screen_name)
      expect(title).toBe(tweet.article!.title)
    })

    it('article-no-header: keeps the X Article title as the lead even without a cover', () => {
      const tweet = fixtures['article-no-header'].tweet!
      const title = buildTweetTitle(tweet, tweet.author.screen_name)
      expect(title).toBe(tweet.article!.title)
    })

    it('long-text-with-quote: truncates long tweet text at a word boundary, not mid-word', () => {
      const tweet = fixtures['long-text-with-quote'].tweet!
      const title = buildTweetTitle(tweet, tweet.author.screen_name)
      expect(title.includes('| ADHX')).toBe(false)
      // Reasonable title length, and no doubled-up whitespace from a bad cut.
      expect(title.length).toBeLessThanOrEqual(90)
      expect(title).not.toMatch(/ {2,}/)
    })

    it('falls back to a media-aware label for an empty-text video tweet', () => {
      const base = fixtures['video-tweet'].tweet!
      const emptyTextVideoTweet = { ...base, text: '   https://t.co/abc123   ' }
      const title = buildTweetTitle(emptyTextVideoTweet, emptyTextVideoTweet.author.screen_name)
      expect(title).toBe(`Video by @${emptyTextVideoTweet.author.screen_name}`)
    })

    it('falls back to a photo label for an empty-text photo tweet', () => {
      const base = fixtures['4-images'].tweet!
      const emptyTextPhotoTweet = { ...base, text: '' }
      const title = buildTweetTitle(emptyTextPhotoTweet, emptyTextPhotoTweet.author.screen_name)
      expect(title).toBe(`Photo by @${emptyTextPhotoTweet.author.screen_name}`)
    })

    it('falls back to a generic label for an empty-text tweet with no media', () => {
      const base = fixtures['plain-text'].tweet!
      const emptyTextTweet = { ...base, text: '' }
      const title = buildTweetTitle(emptyTextTweet, emptyTextTweet.author.screen_name)
      expect(title).toBe(`Post by @${emptyTextTweet.author.screen_name}`)
    })

    it('adds an engagement suffix to the SEO description when counts are notable', () => {
      const base = fixtures['plain-text'].tweet!
      const tweet = { ...base, likes: 1400, retweets: 84 }
      const description = buildTweetSeoDescription(tweet)
      expect(description).toContain('1.4K likes')
      expect(description).toContain('84 reposts')
      expect(description.length).toBeLessThanOrEqual(160)
    })

    it('omits the engagement suffix below the notability thresholds', () => {
      const base = fixtures['plain-text'].tweet!
      const tweet = { ...base, likes: 10, retweets: 2 }
      const description = buildTweetSeoDescription(tweet)
      expect(description).not.toContain('likes')
      expect(description).not.toContain('reposts')
    })
  })

  describe('Edge cases', () => {
    it('emoji-tweet: handles emoji-heavy content', () => {
      const tweet = fixtures['emoji-tweet'].tweet!
      const ogImage = getOgImage(tweet, BASE_URL)

      expect(ogImage).toBeTruthy()
    })

    it('reply-tweet: handles reply context', () => {
      const tweet = fixtures['reply-tweet'].tweet!
      const ogImage = getOgImage(tweet, BASE_URL)

      expect(ogImage).toBeTruthy()
    })

    it('long-text-with-quote: handles both long text and quote', () => {
      const tweet = fixtures['long-text-with-quote'].tweet!
      const ogImage = getOgImage(tweet, BASE_URL)

      expect(ogImage).toBeTruthy()
    })
  })

  describe('OG Image URL Accessibility (Integration)', () => {
    /**
     * These tests verify that OG image URLs are actually fetchable by crawlers.
     * This catches issues like:
     * - URLs that return HTML instead of images
     * - CDN blocks on crawler user-agents
     * - Expired or invalid URLs
     */

    // Helper to check if a URL returns an image
    async function isImageAccessible(
      url: string,
    ): Promise<{ ok: boolean; contentType?: string; status?: number }> {
      try {
        const response = await fetch(url, {
          method: 'HEAD',
          headers: {
            // Simulate a social media crawler
            'User-Agent': 'WhatsApp/2.0',
          },
        })
        const contentType = response.headers.get('content-type') || ''
        return {
          ok: response.ok && contentType.startsWith('image/'),
          contentType,
          status: response.status,
        }
      } catch {
        return { ok: false }
      }
    }

    it('video-tweet: thumbnail URL is accessible to crawlers', async () => {
      const tweet = fixtures['video-tweet'].tweet!
      const ogImage = getOgImage(tweet, BASE_URL)

      // Skip logo fallback URLs (local)
      if (ogImage.includes('og-logo.png')) return

      const result = await isImageAccessible(ogImage)
      expect(result.ok).toBe(true)
      expect(result.contentType).toMatch(/^image\//)
    }, 10000)

    it('4-images: photo URL is accessible to crawlers', async () => {
      const tweet = fixtures['4-images'].tweet!
      const ogImage = getOgImage(tweet, BASE_URL)

      if (ogImage.includes('og-logo.png')) return

      const result = await isImageAccessible(ogImage)
      expect(result.ok).toBe(true)
      expect(result.contentType).toMatch(/^image\//)
    }, 10000)

    it('article-with-media: article cover URL is accessible', async () => {
      const tweet = fixtures['article-with-media'].tweet!
      const ogImage = getOgImage(tweet, BASE_URL)

      if (ogImage.includes('og-logo.png')) return

      const result = await isImageAccessible(ogImage)
      expect(result.ok).toBe(true)
      expect(result.contentType).toMatch(/^image\//)
    }, 10000)

    it('youtube-link: external thumbnail URL is accessible', async () => {
      const tweet = fixtures['youtube-link'].tweet!
      const ogImage = getOgImage(tweet, BASE_URL)

      if (ogImage.includes('og-logo.png')) return

      const result = await isImageAccessible(ogImage)
      // YouTube thumbnails should be accessible
      expect(result.ok).toBe(true)
      expect(result.contentType).toMatch(/^image\//)
    }, 10000)
  })
})
