// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OG Metadata with Real Fixtures > Full metadata generation > '4-images': generates valid content-first metadata 1`] = `
{
  "description": "Apparently, a 19 year old built Wisprflow's UGC program to 500M views in 60 days. Dude spills some sauce on LinkedIn. Open this to see… (2.4K likes, 98 reposts)",
  "openGraph": {
    "authors": [
      "https://x.com/iamgdsa",
    ],
    "description": "Apparently, a 19 year old built Wisprflow's UGC program to 500M views in 60 days. Dude spills some sauce on LinkedIn. Open this to see… (2.4K likes, 98 reposts)",
    "images": [
      {
        "height": 630,
        "url": "https://pbs.twimg.com/media/G-e63eNWkAATqEB.jpg",
        "width": 1200,
      },
    ],
    "publishedTime": "Mon Jan 12 18:34:37 +0000 2026",
    "siteName": "ADHX",
    "title": "Apparently, a 19 year old built Wisprflow's UGC program to… — @iamgdsa",
    "type": "article",
  },
  "title": "Apparently, a 19 year old built Wisprflow's UGC program to… — @iamgdsa",
  "twitter": {
    "card": "summary_large_image",
    "creator": "@iamgdsa",
    "description": "Apparently, a 19 year old built Wisprflow's UGC program to 500M views in 60 days. Dude spills some sauce on LinkedIn. Open this to see… (2.4K likes, 98 reposts)",
    "images": [
      "https://pbs.twimg.com/media/G-e63eNWkAATqEB.jpg",
    ],
    "title": "Apparently, a 19 year old built Wisprflow's UGC program to… — @iamgdsa",
  },
}
`;

exports[`OG Metadata with Real Fixtures > Full metadata generation > 'article-no-header': generates valid content-first metadata 1`] = `
{
  "description": "human data will be a $1 trillion/year market This is not a short-term prediction. It is a structural claim about where the economy… (4.8K likes, 629 reposts)",
  "openGraph": {
    "authors": [
      "https://x.com/aliniikk",
    ],
    "description": "human data will be a $1 trillion/year market This is not a short-term prediction. It is a structural claim about where the economy… (4.8K likes, 629 reposts)",
    "images": [
      {
        "height": 630,
        "url": "https://pbs.twimg.com/profile_images/1987673473108582402/yFQu0vw1_200x200.jpg",
        "width": 1200,
      },
    ],
    "publishedTime": "Thu Jan 08 19:34:17 +0000 2026",
    "siteName": "ADHX",
    "title": "human data will be a $1 trillion/year market",
    "type": "article",
  },
  "title": "human data will be a $1 trillion/year market",
  "twitter": {
    "card": "summary_large_image",
    "creator": "@aliniikk",
    "description": "human data will be a $1 trillion/year market This is not a short-term prediction. It is a structural claim about where the economy… (4.8K likes, 629 reposts)",
    "images": [
      "https://pbs.twimg.com/profile_images/1987673473108582402/yFQu0vw1_200x200.jpg",
    ],
    "title": "human data will be a $1 trillion/year market",
  },
}
`;

exports[`OG Metadata with Real Fixtures > Full metadata generation > 'article-with-media': generates valid content-first metadata 1`] = `
{
  "description": "Guys. I finally did it. After years of fidgeting with macros, intermittent fasting, and diet “hacks”, I finally got hyperlean. My… (4.4K likes, 220 reposts)",
  "openGraph": {
    "authors": [
      "https://x.com/NoahRyanCo",
    ],
    "description": "Guys. I finally did it. After years of fidgeting with macros, intermittent fasting, and diet “hacks”, I finally got hyperlean. My… (4.4K likes, 220 reposts)",
    "images": [
      {
        "height": 630,
        "url": "https://pbs.twimg.com/media/G-E_92mXcAALnrI.jpg",
        "width": 1200,
      },
    ],
    "publishedTime": "Wed Jan 07 17:42:16 +0000 2026",
    "siteName": "ADHX",
    "title": "How to Get Shredded (Without Even Trying)",
    "type": "article",
  },
  "title": "How to Get Shredded (Without Even Trying)",
  "twitter": {
    "card": "summary_large_image",
    "creator": "@NoahRyanCo",
    "description": "Guys. I finally did it. After years of fidgeting with macros, intermittent fasting, and diet “hacks”, I finally got hyperlean. My… (4.4K likes, 220 reposts)",
    "images": [
      "https://pbs.twimg.com/media/G-E_92mXcAALnrI.jpg",
    ],
    "title": "How to Get Shredded (Without Even Trying)",
  },
}
`;

exports[`OG Metadata with Real Fixtures > Full metadata generation > 'emoji-tweet': generates valid content-first metadata 1`] = `
{
  "description": "BREAKING: @AviciMoney now offers 🇺🇸 and 🇪🇺 Named Virtual Accounts powered by @moonpay & @iron 1️⃣ Claim your own named account in… (2.2K likes, 821 reposts)",
  "openGraph": {
    "authors": [
      "https://x.com/moonpay",
    ],
    "description": "BREAKING: @AviciMoney now offers 🇺🇸 and 🇪🇺 Named Virtual Accounts powered by @moonpay & @iron 1️⃣ Claim your own named account in… (2.2K likes, 821 reposts)",
    "images": [
      {
        "height": 630,
        "url": "https://pbs.twimg.com/amplify_video_thumb/2009617113384706048/img/uUdl5DT48QRZSEHb.jpg",
        "width": 1200,
      },
    ],
    "publishedTime": "Fri Jan 09 13:59:16 +0000 2026",
    "siteName": "ADHX",
    "title": "BREAKING: @AviciMoney now offers 🇺🇸 and 🇪🇺 Named… — @moonpay",
    "type": "article",
  },
  "title": "BREAKING: @AviciMoney now offers 🇺🇸 and 🇪🇺 Named… — @moonpay",
  "twitter": {
    "card": "summary_large_image",
    "creator": "@moonpay",
    "description": "BREAKING: @AviciMoney now offers 🇺🇸 and 🇪🇺 Named Virtual Accounts powered by @moonpay & @iron 1️⃣ Claim your own named account in… (2.2K likes, 821 reposts)",
    "images": [
      "https://pbs.twimg.com/amplify_video_thumb/2009617113384706048/img/uUdl5DT48QRZSEHb.jpg",
    ],
    "title": "BREAKING: @AviciMoney now offers 🇺🇸 and 🇪🇺 Named… — @moonpay",
  },
}
`;

exports[`OG Metadata with Real Fixtures > Full metadata generation > 'long-text-1-image': generates valid content-first metadata 1`] = `
{
  "description": "Nano Banana + Fastmoss + Manus + Veo3 = AI Content Factory We built a fully automated system that repurposes, localizes, and launches… (4.5K likes, 491 reposts)",
  "openGraph": {
    "authors": [
      "https://x.com/maverickecom",
    ],
    "description": "Nano Banana + Fastmoss + Manus + Veo3 = AI Content Factory We built a fully automated system that repurposes, localizes, and launches… (4.5K likes, 491 reposts)",
    "images": [
      {
        "height": 630,
        "url": "https://pbs.twimg.com/media/G-o_WJ1akAA3-h-.jpg",
        "width": 1200,
      },
    ],
    "publishedTime": "Wed Jan 14 17:25:23 +0000 2026",
    "siteName": "ADHX",
    "title": "Nano Banana + Fastmoss + Manus + Veo3 = AI Content Factory…",
    "type": "article",
  },
  "title": "Nano Banana + Fastmoss + Manus + Veo3 = AI Content Factory…",
  "twitter": {
    "card": "summary_large_image",
    "creator": "@maverickecom",
    "description": "Nano Banana + Fastmoss + Manus + Veo3 = AI Content Factory We built a fully automated system that repurposes, localizes, and launches… (4.5K likes, 491 reposts)",
    "images": [
      "https://pbs.twimg.com/media/G-o_WJ1akAA3-h-.jpg",
    ],
    "title": "Nano Banana + Fastmoss + Manus + Veo3 = AI Content Factory…",
  },
}
`;

exports[`OG Metadata with Real Fixtures > Full metadata generation > 'long-text-2-images': generates valid content-first metadata 1`] = `
{
  "description": "🚨BREAKING: TRUMP FURIOUS WITH STARMER U.S state department made clear last night speaking on the UK and Keir Starmer ⬇️ "The… (3.0K likes, 538 reposts)",
  "openGraph": {
    "authors": [
      "https://x.com/BasilTheGreat",
    ],
    "description": "🚨BREAKING: TRUMP FURIOUS WITH STARMER U.S state department made clear last night speaking on the UK and Keir Starmer ⬇️ "The… (3.0K likes, 538 reposts)",
    "images": [
      {
        "height": 630,
        "url": "https://pbs.twimg.com/media/G-w2zr6aEAAt-FN.png",
        "width": 1200,
      },
    ],
    "publishedTime": "Fri Jan 16 06:09:20 +0000 2026",
    "siteName": "ADHX",
    "title": "🚨BREAKING: TRUMP FURIOUS WITH STARMER U.S state department…",
    "type": "article",
  },
  "title": "🚨BREAKING: TRUMP FURIOUS WITH STARMER U.S state department…",
  "twitter": {
    "card": "summary_large_image",
    "creator": "@BasilTheGreat",
    "description": "🚨BREAKING: TRUMP FURIOUS WITH STARMER U.S state department made clear last night speaking on the UK and Keir Starmer ⬇️ "The… (3.0K likes, 538 reposts)",
    "images": [
      "https://pbs.twimg.com/media/G-w2zr6aEAAt-FN.png",
    ],
    "title": "🚨BREAKING: TRUMP FURIOUS WITH STARMER U.S state department…",
  },
}
`;

exports[`OG Metadata with Real Fixtures > Full metadata generation > 'long-text-with-quote': generates valid content-first metadata 1`] = `
{
  "description": "⚡️This is a live containment operation. The strike was real. The reversal was real. This is state-level controlled ignition. There… (5.9K likes, 916 reposts)",
  "openGraph": {
    "authors": [
      "https://x.com/_The_Prophet__",
    ],
    "description": "⚡️This is a live containment operation. The strike was real. The reversal was real. This is state-level controlled ignition. There… (5.9K likes, 916 reposts)",
    "images": [
      {
        "height": 630,
        "url": "https://pbs.twimg.com/media/G-tNQK3akAAXwrR.jpg",
        "width": 1200,
      },
    ],
    "publishedTime": "Thu Jan 15 16:13:54 +0000 2026",
    "siteName": "ADHX",
    "title": "⚡️This is a live containment operation. The strike was…",
    "type": "article",
  },
  "title": "⚡️This is a live containment operation. The strike was…",
  "twitter": {
    "card": "summary_large_image",
    "creator": "@_The_Prophet__",
    "description": "⚡️This is a live containment operation. The strike was real. The reversal was real. This is state-level controlled ignition. There… (5.9K likes, 916 reposts)",
    "images": [
      "https://pbs.twimg.com/media/G-tNQK3akAAXwrR.jpg",
    ],
    "title": "⚡️This is a live containment operation. The strike was…",
  },
}
`;

exports[`OG Metadata with Real Fixtures > Full metadata generation > 'plain-text': generates valid content-first metadata 1`] = `
{
  "description": "What movie is 10/10, yet hardly anyone has heard of it? (4.9K likes, 401 reposts)",
  "openGraph": {
    "authors": [
      "https://x.com/TheCinesthetic",
    ],
    "description": "What movie is 10/10, yet hardly anyone has heard of it? (4.9K likes, 401 reposts)",
    "images": [
      {
        "height": 630,
        "url": "https://pbs.twimg.com/profile_images/1385452682517745667/mfcIUnoX_200x200.jpg",
        "width": 1200,
      },
    ],
    "publishedTime": "Sun Jan 11 03:00:02 +0000 2026",
    "siteName": "ADHX",
    "title": "What movie is 10/10, yet hardly anyone has heard of it?",
    "type": "article",
  },
  "title": "What movie is 10/10, yet hardly anyone has heard of it?",
  "twitter": {
    "card": "summary_large_image",
    "creator": "@TheCinesthetic",
    "description": "What movie is 10/10, yet hardly anyone has heard of it? (4.9K likes, 401 reposts)",
    "images": [
      "https://pbs.twimg.com/profile_images/1385452682517745667/mfcIUnoX_200x200.jpg",
    ],
    "title": "What movie is 10/10, yet hardly anyone has heard of it?",
  },
}
`;

exports[`OG Metadata with Real Fixtures > Full metadata generation > 'quote-of-image-tweet': generates valid content-first metadata 1`] = `
{
  "description": "for all of you guys that haven’t cracked organic yet you’re welcome (1.1K likes)",
  "openGraph": {
    "authors": [
      "https://x.com/Nate_Google_",
    ],
    "description": "for all of you guys that haven’t cracked organic yet you’re welcome (1.1K likes)",
    "images": [
      {
        "height": 630,
        "url": "https://pbs.twimg.com/media/G-o_WJ1akAA3-h-.jpg",
        "width": 1200,
      },
    ],
    "publishedTime": "Thu Jan 15 13:25:44 +0000 2026",
    "siteName": "ADHX",
    "title": "for all of you guys that haven’t cracked organic yet you’re…",
    "type": "article",
  },
  "title": "for all of you guys that haven’t cracked organic yet you’re…",
  "twitter": {
    "card": "summary_large_image",
    "creator": "@Nate_Google_",
    "description": "for all of you guys that haven’t cracked organic yet you’re welcome (1.1K likes)",
    "images": [
      "https://pbs.twimg.com/media/G-o_WJ1akAA3-h-.jpg",
    ],
    "title": "for all of you guys that haven’t cracked organic yet you’re…",
  },
}
`;

exports[`OG Metadata with Real Fixtures > Full metadata generation > 'quote-of-text-tweet': generates valid content-first metadata 1`] = `
{
  "description": "True (3.2K likes, 423 reposts)",
  "openGraph": {
    "authors": [
      "https://x.com/elonmusk",
    ],
    "description": "True (3.2K likes, 423 reposts)",
    "images": [
      {
        "height": 630,
        "url": "https://pbs.twimg.com/profile_images/2008546467615580160/57KcqsTA_200x200.jpg",
        "width": 1200,
      },
    ],
    "publishedTime": "Fri Jan 16 05:55:05 +0000 2026",
    "siteName": "ADHX",
    "title": "True — @elonmusk",
    "type": "article",
  },
  "title": "True — @elonmusk",
  "twitter": {
    "card": "summary_large_image",
    "creator": "@elonmusk",
    "description": "True (3.2K likes, 423 reposts)",
    "images": [
      "https://pbs.twimg.com/profile_images/2008546467615580160/57KcqsTA_200x200.jpg",
    ],
    "title": "True — @elonmusk",
  },
}
`;

exports[`OG Metadata with Real Fixtures > Full metadata generation > 'reply-tweet': generates valid content-first metadata 1`] = `
{
  "description": "Based on recent reports, the UK government has approved postponements (not permanent cancellations) for some May 2026 local elections in areas… (114 likes)",
  "openGraph": {
    "authors": [
      "https://x.com/grok",
    ],
    "description": "Based on recent reports, the UK government has approved postponements (not permanent cancellations) for some May 2026 local elections in areas… (114 likes)",
    "images": [
      {
        "height": 630,
        "url": "https://pbs.twimg.com/profile_images/1893219113717342208/Vgg2hEPa_200x200.jpg",
        "width": 1200,
      },
    ],
    "publishedTime": "Thu Jan 15 00:29:03 +0000 2026",
    "siteName": "ADHX",
    "title": "Based on recent reports, the UK government has approved… — @grok",
    "type": "article",
  },
  "title": "Based on recent reports, the UK government has approved… — @grok",
  "twitter": {
    "card": "summary_large_image",
    "creator": "@grok",
    "description": "Based on recent reports, the UK government has approved postponements (not permanent cancellations) for some May 2026 local elections in areas… (114 likes)",
    "images": [
      "https://pbs.twimg.com/profile_images/1893219113717342208/Vgg2hEPa_200x200.jpg",
    ],
    "title": "Based on recent reports, the UK government has approved… — @grok",
  },
}
`;

exports[`OG Metadata with Real Fixtures > Full metadata generation > 'text-quoting-video': generates valid content-first metadata 1`] = `
{
  "description": "insane how much goalposts have shifted that bfl can just drop a model that is ~10x better than Stable Diffusion while being ~as small and basically… (636 likes)",
  "openGraph": {
    "authors": [
      "https://x.com/swyx",
    ],
    "description": "insane how much goalposts have shifted that bfl can just drop a model that is ~10x better than Stable Diffusion while being ~as small and basically… (636 likes)",
    "images": [
      {
        "height": 630,
        "url": "https://pbs.twimg.com/amplify_video_thumb/2011825767634911237/img/rRqDWGszLMh8F1zp.jpg",
        "width": 1200,
      },
    ],
    "publishedTime": "Thu Jan 15 18:00:48 +0000 2026",
    "siteName": "ADHX",
    "title": "insane how much goalposts have shifted that bfl can just… — @swyx",
    "type": "article",
  },
  "title": "insane how much goalposts have shifted that bfl can just… — @swyx",
  "twitter": {
    "card": "summary_large_image",
    "creator": "@swyx",
    "description": "insane how much goalposts have shifted that bfl can just drop a model that is ~10x better than Stable Diffusion while being ~as small and basically… (636 likes)",
    "images": [
      "https://pbs.twimg.com/amplify_video_thumb/2011825767634911237/img/rRqDWGszLMh8F1zp.jpg",
    ],
    "title": "insane how much goalposts have shifted that bfl can just… — @swyx",
  },
}
`;

exports[`OG Metadata with Real Fixtures > Full metadata generation > 'video-tweet': generates valid content-first metadata 1`] = `
{
  "description": "Primes look chaotic in a line, but reveal structure when space curves. Same numbers. Different geometry. Hidden order. (3.6K likes, 592 reposts)",
  "openGraph": {
    "authors": [
      "https://x.com/Kekius_Sage",
    ],
    "description": "Primes look chaotic in a line, but reveal structure when space curves. Same numbers. Different geometry. Hidden order. (3.6K likes, 592 reposts)",
    "images": [
      {
        "height": 630,
        "url": "https://pbs.twimg.com/amplify_video_thumb/2011857732484423680/img/wFNhWwXUnF0woRwH.jpg",
        "width": 1200,
      },
    ],
    "publishedTime": "Thu Jan 15 18:45:00 +0000 2026",
    "siteName": "ADHX",
    "title": "Primes look chaotic in a line, but reveal structure when…",
    "type": "article",
  },
  "title": "Primes look chaotic in a line, but reveal structure when…",
  "twitter": {
    "card": "summary_large_image",
    "creator": "@Kekius_Sage",
    "description": "Primes look chaotic in a line, but reveal structure when space curves. Same numbers. Different geometry. Hidden order. (3.6K likes, 592 reposts)",
    "images": [
      "https://pbs.twimg.com/amplify_video_thumb/2011857732484423680/img/wFNhWwXUnF0woRwH.jpg",
    ],
    "title": "Primes look chaotic in a line, but reveal structure when…",
  },
}
`;

exports[`OG Metadata with Real Fixtures > Full metadata generation > 'youtube-link': generates valid content-first metadata 1`] = `
{
  "description": "link: (381 likes)",
  "openGraph": {
    "authors": [
      "https://x.com/skalskip92",
    ],
    "description": "link: (381 likes)",
    "images": [
      {
        "height": 630,
        "url": "https://pbs.twimg.com/profile_images/1557421659925237763/RzJu2YI3_200x200.jpg",
        "width": 1200,
      },
    ],
    "publishedTime": "Thu Dec 04 20:26:43 +0000 2025",
    "siteName": "ADHX",
    "title": "link: — @skalskip92",
    "type": "article",
  },
  "title": "link: — @skalskip92",
  "twitter": {
    "card": "summary_large_image",
    "creator": "@skalskip92",
    "description": "link: (381 likes)",
    "images": [
      "https://pbs.twimg.com/profile_images/1557421659925237763/RzJu2YI3_200x200.jpg",
    ],
    "title": "link: — @skalskip92",
  },
}
`;

exports[`OG Metadata with Real Fixtures > getOgImage returns appropriate image for each tweet type > '4-images': returns correct OG image 1`] = `
{
  "ogImage": "https://pbs.twimg.com/media/G-e63eNWkAATqEB.jpg",
  "slug": "4-images",
}
`;

exports[`OG Metadata with Real Fixtures > getOgImage returns appropriate image for each tweet type > 'article-no-header': returns correct OG image 1`] = `
{
  "ogImage": "https://pbs.twimg.com/profile_images/1987673473108582402/yFQu0vw1_200x200.jpg",
  "slug": "article-no-header",
}
`;

exports[`OG Metadata with Real Fixtures > getOgImage returns appropriate image for each tweet type > 'article-with-media': returns correct OG image 1`] = `
{
  "ogImage": "https://pbs.twimg.com/media/G-E_92mXcAALnrI.jpg",
  "slug": "article-with-media",
}
`;

exports[`OG Metadata with Real Fixtures > getOgImage returns appropriate image for each tweet type > 'emoji-tweet': returns correct OG image 1`] = `
{
  "ogImage": "https://pbs.twimg.com/amplify_video_thumb/2009617113384706048/img/uUdl5DT48QRZSEHb.jpg",
  "slug": "emoji-tweet",
}
`;

exports[`OG Metadata with Real Fixtures > getOgImage returns appropriate image for each tweet type > 'long-text-1-image': returns correct OG image 1`] = `
{
  "ogImage": "https://pbs.twimg.com/media/G-o_WJ1akAA3-h-.jpg",
  "slug": "long-text-1-image",
}
`;

exports[`OG Metadata with Real Fixtures > getOgImage returns appropriate image for each tweet type > 'long-text-2-images': returns correct OG image 1`] = `
{
  "ogImage": "https://pbs.twimg.com/media/G-w2zr6aEAAt-FN.png",
  "slug": "long-text-2-images",
}
`;

exports[`OG Metadata with Real Fixtures > getOgImage returns appropriate image for each tweet type > 'long-text-with-quote': returns correct OG image 1`] = `
{
  "ogImage": "https://pbs.twimg.com/media/G-tNQK3akAAXwrR.jpg",
  "slug": "long-text-with-quote",
}
`;

exports[`OG Metadata with Real Fixtures > getOgImage returns appropriate image for each tweet type > 'plain-text': returns correct OG image 1`] = `
{
  "ogImage": "https://pbs.twimg.com/profile_images/1385452682517745667/mfcIUnoX_200x200.jpg",
  "slug": "plain-text",
}
`;

exports[`OG Metadata with Real Fixtures > getOgImage returns appropriate image for each tweet type > 'quote-of-image-tweet': returns correct OG image 1`] = `
{
  "ogImage": "https://pbs.twimg.com/media/G-o_WJ1akAA3-h-.jpg",
  "slug": "quote-of-image-tweet",
}
`;

exports[`OG Metadata with Real Fixtures > getOgImage returns appropriate image for each tweet type > 'quote-of-text-tweet': returns correct OG image 1`] = `
{
  "ogImage": "https://pbs.twimg.com/profile_images/2008546467615580160/57KcqsTA_200x200.jpg",
  "slug": "quote-of-text-tweet",
}
`;

exports[`OG Metadata with Real Fixtures > getOgImage returns appropriate image for each tweet type > 'reply-tweet': returns correct OG image 1`] = `
{
  "ogImage": "https://pbs.twimg.com/profile_images/1893219113717342208/Vgg2hEPa_200x200.jpg",
  "slug": "reply-tweet",
}
`;

exports[`OG Metadata with Real Fixtures > getOgImage returns appropriate image for each tweet type > 'text-quoting-video': returns correct OG image 1`] = `
{
  "ogImage": "https://pbs.twimg.com/amplify_video_thumb/2011825767634911237/img/rRqDWGszLMh8F1zp.jpg",
  "slug": "text-quoting-video",
}
`;

exports[`OG Metadata with Real Fixtures > getOgImage returns appropriate image for each tweet type > 'video-tweet': returns correct OG image 1`] = `
{
  "ogImage": "https://pbs.twimg.com/amplify_video_thumb/2011857732484423680/img/wFNhWwXUnF0woRwH.jpg",
  "slug": "video-tweet",
}
`;

exports[`OG Metadata with Real Fixtures > getOgImage returns appropriate image for each tweet type > 'youtube-link': returns correct OG image 1`] = `
{
  "ogImage": "https://pbs.twimg.com/profile_images/1557421659925237763/RzJu2YI3_200x200.jpg",
  "slug": "youtube-link",
}
`;
